# aind-behavior-rig-calibration

./: .buildinfo  .gitignore  README.md  api.base.html  api.calibration.html  api.data_types.html  api.html  api.rig.html  api.session.html  api.task_logic.html  api.utils.html  genindex.html  index.html  json_schemas.html  objects.inv  olfactometer.json  olfactometer_ingestion.py  py-modindex.html  pyproject.toml  regenerate.py  requirements.txt  search.html  searchindex.js
.doctrees/: api.base.doctree  api.calibration.doctree  api.data_types.doctree  api.doctree  api.rig.doctree  api.session.doctree  api.task_logic.doctree  api.utils.doctree  environment.pickle  index.doctree  json_schemas.doctree
.doctrees/api.calibration/: aind_manipulator.doctree  load_cells.doctree  olfactometer.doctree  treadmill.doctree  water_valve.doctree
.doctrees/articles/: data_formats.doctree
.doctrees/articles/core/: conventions.doctree  dataset_structure.doctree
.doctrees/articles/data_formats/: harp.doctree  software_events.doctree  video.doctree
.doctrees/json_schemas/: aind_behavior_data_types.doctree  aind_behavior_session.doctree  aind_behavior_subject_database.doctree  aind_manipulator_calibration_logic.doctree  aind_manipulator_calibration_rig.doctree
.github/workflows/: ci.yml  tag_and_publish.yml
_sources/: api.rig.rst.txt
_sources/api.calibration/: olfactometer.rst.txt
api.calibration/: aind_manipulator.html  load_cells.html  olfactometer.html  treadmill.html  water_valve.html
articles/: data_formats.html
articles/core/: conventions.html  dataset_structure.html
articles/data_formats/: harp.html  software_events.html  video.html
assets/: dependency_tree.drawio
bonsai/: Bonsai.config
docs/: aind_services.rst  api.aind_services.rst  api.base.rst  api.calibration.rst  api.launcher.rst  api.rst  conf.py  index.rst  json-schemas.rst
docs/aind_services/: data_mapper.rst  watchdog.rst
docs/api/: api.rig.rst  api.task_logic.rst  rig.rst  session.rst
docs/api.aind_services/: data_mapper.rst  helpers.rst  watchdog.rst
docs/api.base/: task_logic.rst
docs/api.calibration/: aind_manipulator.rst  load_cells.rst  olfactometer.rst  treadmill.rst  water_valve.rst
docs/articles/: data_formats.rst
docs/articles/core/: conventions.rst  dataset_structure.rst
docs/articles/data_formats/: conventions.rst  dataset_structure.rst  harp.rst  video.rst
docs/json-schemas/: aind_behavior_session.rst  aind_behavior_subject_database.rst  aind_manipulator_calibration_logic.rst  aind_manipulator_calibration_rig.rst  load_cells_calibration_logic.rst  load_cells_calibration_rig.rst  olfactometer_calibration_logic.rst  olfactometer_calibration_rig.rst  water_valve_calibration_logic.rst  water_valve_calibration_rig.rst
examples/: aind_manipulator.py  load_cells.py  olfacto_first_attempt.ipynb  olfacto_second_attempt.ipynb  olfactometer.py  olfactometer_calibration.ipynb  olfactometer_calibration_replication.ipynb  olfactometer_ingestion.py  treadmill.py  water_valve.py
json_schemas/: aind_behavior_data_types.html  aind_behavior_session.html  aind_behavior_subject_database.html  aind_manipulator_calibration_logic.html  aind_manipulator_calibration_rig.html
scripts/: install_dependencies.ps1  regenerate.ps1  regenerate.py  regenerate_examples.ps1  setup_watchdog.ps1
src/: Extensions.csproj  aind-manipulator.bonsai  aind_manipulator_calibration.bonsai  olfactometer_calibration.bonsai  unit_tests.bonsai
src/DataSchemas/: olfactometer_calibration.json  regenerate.py  water_valve_calibration.json
src/DataSchemas/aind_behavior_rig/: olfactometer.py  water_valve.py
src/DataSchemas/aind_behavior_rig_calibration/: base.py  water_valve_calibration.py
src/DataSchemas/aind_behavior_services/: __init__.py  base.py  data_types.py  launcher.py  launcher_vr.py  utils.py
src/DataSchemas/schemas/: aind_behavior_data_types.json  aind_behavior_session.json  aind_behavior_subject_database.json  aind_manipulator_calibration.json  aind_manipulator_calibration_logic.json  aind_manipulator_calibration_rig.json  load_cells_calibration.json  load_cells_calibration_logic.json  load_cells_calibration_rig.json  olfactometer_calibration.json  olfactometer_calibration_logic.json  olfactometer_calibration_rig.json  (+3 more)
src/Extensions/: AindBehaviorSession.cs  AindBehaviorSubjectDatabase.cs  AindManipulatorCalibration.cs  AindManipulatorCalibrationLogic.cs  AindManipulatorCalibrationRig.cs  CaptureProcess.cs  ConfigureMotor.bonsai  HarpAnalogInputDevice.bonsai  HarpClockSynchronizerDevice.bonsai  HarpOlfactometerDevice.bonsai  HomeAxis.bonsai  LoadCellsCalibration.cs  LoadCellsCalibrationLogic.cs  LoadCellsCalibrationRig.cs  OlfactometerCalibration.cs  OlfactometerCalibrationLogic.cs  OlfactometerCalibrationRig.cs  TreadmillCalibrationLogic.cs  TreadmillCalibrationRig.cs  WaterValveCalibration.cs  WaterValveCalibrationLogic.cs  WaterValveCalibrationRig.cs
src/aind_behavior_services/: __init__.py  base.py  utils.py
src/schemas/: aind_behavior_data_types.json  aind_behavior_session.json  aind_behavior_subject_database.json  aind_manipulator_calibration_logic.json  aind_manipulator_calibration_rig.json  load_cells_calibration_logic.json  load_cells_calibration_rig.json  olfactometer_calibration_logic.json  olfactometer_calibration_rig.json  treadmill_calibration_logic.json  treadmill_calibration_rig.json  water_valve_calibration_logic.json  water_valve_calibration_rig.json
tests/: __init__.py  test_aind_manipulator.py  test_aind_services.py  test_bonsai.py  test_examples.py  test_launcher.py  test_launcher_services.py  test_load_cells.py  test_olfactometer.py  test_rig.py  test_schema_version_coercion.py  test_utils.py  test_water_valve.py  test_water_valve_calibration.py  test_z_bonsai.py
(+56 files in other folders)
