[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-behavior-services"
description = "A library that defines AIND data schema and validates JSON files for behavior rig models."
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme"]

dependencies = [
    'pydantic>=2.7, <3.0',
    'harp-python>=0.2',
    'gitpython>=3.1, <4.0',
    'scikit-learn',
    'semver',
    'aind-behavior-curriculum@git+https://github.com/AllenNeuralDynamics/aind-behavior-curriculum@v0.0.27',

]

[project.optional-dependencies]

aind-extra-services = [
    'aind-watchdog-service@git+https://github.com/AllenNeuralDynamics/aind-watchdog-service@development',
    'aind-data-schema==0.38.5'
]


linters = [
    'ruff',
    'codespell'
]

docs = [
    'Sphinx<7.3',
    'furo',
    'sphinx-jinja',
    'autodoc_pydantic[erdantic]',
    'myst_parser',
    'sphinx-jsonschema',
    'sphinx-copybutton'
]

[tool.setuptools.packages.find]
where = ["src/DataSchemas"]

[tool.setuptools.dynamic]
version = {attr = "aind_behavior_services.__version__"}
readme = {file = ["README.md"]}

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build'
ignore-words-list = 'nd'