[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-behavior-services"
description = "A library that defines AIND data schema and validates JSON files for behavior rig models."
authors = [
    { name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org" },
]
license = {text = "MIT"}
requires-python = ">=3.11"
dynamic = ["version", "readme"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    'pydantic>=2.7, <3.0',
    'harp-python>=0.2',
    'gitpython>=3.1, <4.0',
    'scikit-learn',
    'semver',
    'aind-behavior-curriculum@git+https://github.com/AllenNeuralDynamics/aind-behavior-curriculum@v0.0.27',
]

[project.urls]
Documentation = "https://allenneuraldynamics.github.io/Aind.Behavior.Services/"
Repository = "https://github.com/AllenNeuralDynamics/Aind.Behavior.Services/"
Issues = "https://github.com/AllenNeuralDynamics/Aind.Behavior.Services/issues"
Changelog = "https://github.com/AllenNeuralDynamics/Aind.Behavior.Services/releases"

[project.optional-dependencies]
aind-extra-services = [
    'aind-watchdog-service@git+https://github.com/AllenNeuralDynamics/aind-watchdog-service@requirements-fix-aind-transfer-models',
    'aind-data-schema==0.38.5',
    'aind-data-transfer-models<0.5.6', # need to pin this or it will request aind-data-schema 0.35.0 via aind-data-mapper
]
linters = [
    'ruff',
    'codespell'
]
docs = [
    'Sphinx<7.3',
    'furo',
    'sphinx-jinja',
    'autodoc_pydantic[erdantic]',
    'myst_parser',
    'sphinx-jsonschema',
    'sphinx-copybutton'
]

[tool.setuptools.packages.find]
where = ["src/DataSchemas"]

[tool.setuptools.package-data]
aind_behavior_services = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "aind_behavior_services.__version__"}
readme = {file = ["README.md"]}

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build'
ignore-words-list = 'nd'